[package]
name = "ic-file-uploader"
version = "0.1.2"
authors = ["Jeshli <Jeshli.Eth@gmail.com>"]
edition = "2021"
description = "A utility for uploading files larger than 2MB to Internet Computer canisters."
license = "MIT OR Apache-2.0"
repository = "https://github.com/modclub-app/ic-file-uploader"
homepage = "https://github.com/modclub-app/ic-file-uploader"
documentation = "https://docs.rs/ic-file-uploader"
readme = "README.md"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
tempfile = "3.9.0"
futures = "0.3"
tokio = { version = "1.39", features = ["full"] }

[[bin]]
name = "ic-file-uploader"
path = "src/main.rs"

[lib]
name = "ic_file_uploader"
path = "src/lib.rs"